[package]

name = "rusti"
version = "0.0.1"
authors = [ "Murarth <murarth@gmail.com>" ]

[lib]

name = "rusti"
path = "src/rusti/lib.rs"

[[bin]]

name = "rusti"
doc = false
test = false

[dependencies]
env_logger = "0.3"
getopts = "0.2"
libc = "0.2"
log = "0.3"
tempfile = "1.1"

[target.'cfg(windows)'.dependencies]
# NOTE(akavel): rustyline-0.2.3 doesn't support Windows, and there's no newer tag as of 2016.08
rustyline = { git = "https://github.com/kkawakam/rustyline", rev = "d1ca6b9" }

[dev-dependencies]
assert_matches = "1.0"
